--- a/bin/config.ini
+++ b/bin/config.ini
@@ -10,8 +10,8 @@ password =
 database = artstudio
 
 [aws]
-accessKey = AKIAQHFURROQL2UR724L
-secretToken = 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
+accessKey = <INSERT ACCESS KEY HERE>
+secretToken = <INSERT SECRET TOKEN HERE>
 bucket = artstudio
 
 [Simple Notification Service]
